Better mobile markup

--- a/index.html
+++ b/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 
 <html lang="en-us" >
-<head>
-  <title>Konstantin Nazarov</title>
+  <head>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+        <meta name="description" content="Konstantin Nazarov: I help companies build continuous delivery pipelines"/>
+        <meta name="author" content="Konstantin Nazarov"/>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+        <title>Konstantin Nazarov</title>
 
-  <link rel="stylesheet" href="css/slate.css"/>
-  <link rel="stylesheet" href="css/font-awesome.min.css"/>
-  <link rel="stylesheet" href="css/custom.css"/>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+
+        <link rel="stylesheet" href="css/slate.css"/>
+        <link rel="stylesheet" href="css/font-awesome.min.css"/>
+        <link rel="stylesheet" href="css/custom.css"/>
 </head>
 
 <body>
-  <div class="container">
+
     <div class="jumbotron">
+      <div class="container">
       <h1 class="pull-left">Konstantin Nazarov</h1>
       <div class="pull-right">
         <h1><small>
@@ -42,8 +48,9 @@
           </a>
         </p>
       </div>
+      </div>
     </div>
-  </div>
+
 
   <div class="container">
 
