Publish my phone number

--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
             <text class="text-warning unselectable">]</text>
             </a>
         </small></h1>
+        <h4>
+          <a href="tel:+74951080608">
+            <text class="text-success">
+              <i class="fa fa-phone"></i> +7(495)1080608
+            </text>
+          </a>
+        </h4>
+
       </div>
       <div class="clearfix"></div>
       <p>I help companies build continuous delivery pipelines</p>
