--- a/index.html
+++ b/index.html
@@ -105,6 +105,11 @@
       </div>
     </div>
   </div>
+
+  <div class="container">
+      <h2>Appointment calendar</h2>
+      <iframe src="https://app.acuityscheduling.com/schedule.php?owner=14718074" width="100%" height="800" frameBorder="0"></iframe><script src="https://d3gxy7nm8y4yjr.cloudfront.net/js/embed.js" type="text/javascript"></script>
+  </div>
 </body>
 
 </html>
