--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -124,7 +124,7 @@ MVPs.</p>
 
 <p>For individuals I offer productivity and goal setting coaching.</p>
 
-<p>Have questions? Drop me a line at <a href="mailto://mail@knazarov.com">mail@knazarov.com</a>.</p>
+<p>Have questions? Drop me a line at <a href="mailto:mail@knazarov.com">mail@knazarov.com</a>.</p>
 
 </div>
 
