--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -6,8 +6,8 @@
         <title>About me &middot; Konstantin Nazarov</title>
         <meta name="description" content="Hi,
 My name is Konstantin. I&rsquo;m a software engineering professional with 10 years of experience. During my career I worked with a diverse set of technologies, ranging from RTOS kernel development to highly loaded web services.
-Currently work at a database startup Tarantool where I manage a team building enterprise solutions based off our own database and application server.
-I also offer consulting in application architecture and implementing MVPs.
+Currently I work at Tarantool where I manage a team building enterprise solutions based off our own database and application server.
+I offer consulting in application architecture and implementing MVPs.
 For individuals I offer productivity and goal setting coaching.">
         <meta name="HandheldFriendly" content="True">
         <meta name="MobileOptimized" content="320">
@@ -118,11 +118,11 @@ if (!doNotTrack) {
 of technologies, ranging from RTOS kernel development to highly
 loaded web services.</p>
 
-<p>Currently work at a database startup <a href="https://tarantool.org">Tarantool</a> where I manage a team
-building enterprise solutions based off our own database and
-application server.</p>
+<p>Currently I work at <a href="https://tarantool.io">Tarantool</a> where I manage a team building
+enterprise solutions based off our own database and application
+server.</p>
 
-<p>I also offer consulting in application architecture and implementing
+<p>I offer consulting in application architecture and implementing
 MVPs.</p>
 
 <p>For individuals I offer productivity and goal setting coaching.</p>
